<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="project.cookerpro.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="project.cookerpro.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="project.cookerpro.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/recipe_details"
        android:name="project.cookerpro.ui.recipe.RecipeDetailsFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe_details">
        <argument
            android:name="recipe"
            app:argType="project.cookerpro.data.Recipe" />
    </fragment>

    <action
        android:id="@+id/action_global_recipe_details"
        app:destination="@id/recipe_details" />

</navigation>