<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.recipe.RecipeDetailsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="300dp" />


        <Button
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_image" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/prep_time"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_prep_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/in_min"
            android:inputType="number"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/cook_time"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_cook_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/in_min"
            android:inputType="number"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_desc_additional_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/additional_time"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_additional_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/in_min"
            android:inputType="number"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_desc_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_time"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_total_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/in_min"
            android:inputType="number"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/ingredients"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgAddIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_ingredient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/directions"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgAddDirections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_recipe_step" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/nutrition_facts_per_serving"
            android:textSize="17sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/calories"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/in_kcal"
            android:inputType="number"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/fat"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/in_gm"
            android:inputType="number"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/carbs"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/in_gm"
            android:inputType="number"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/protein"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/in_gm"
            android:inputType="number"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/add_recipe" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>